--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,16 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 62,5%;
-}
 
+html,
 body {
+  font-size: 62.5%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f6f7;
 }
 
 code {
